# network-exercises

./: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml
c/: BUILDING.md  CMakeUserPresets.json  vcpkg.json
c/cmake/: dev-mode.cmake
c/source/budget-chat/: client.c  client.h  main.c
c/source/log/: log.h
c/source/means-to-an-end/: client-session.c  messages.c  messages.h
c/source/prime-time/: is-prime-request.h  main.c
c/source/utils/: epoll.h  queue.h  sockets.h  utils.h
c/test/: CMakeLists.txt
c/test/budget-chat/: CMakeLists.txt
c/test/queue/: CMakeLists.txt
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake  zig-toolchain.cmake
source/: lib.c  lib.h  main.c
source/budget-chat/: CMakeLists.txt  client.c  client.h  main.c
source/log/: log.c  log.h
source/means-to-an-end/: CMakeLists.txt  asset-prices.c  asset-prices.h  client-session.c  client-session.h  main.c  messages.c  messages.h  prices.c  prices.h
source/prime-time/: CMakeLists.txt  is-prime-request.c  is-prime-request.h  main.c
source/smoke-test/: CMakeLists.txt  epoll.c  epoll.h  main.c
source/thpool/: thpool.c  thpool.h
source/utils/: epoll.c  epoll.h  queue.c  queue.h  ring-buffer.h  sockets.c  sockets.h  utils.c  utils.h
test/: CMakeLists.txt
test/budget-chat/: client-test.cpp
test/is-prime/: CMakeLists.txt  is-prime-request-test.cpp
test/means-to-an-end/: CMakeLists.txt  messages-prices-test.cpp
test/queue/: queue-test.cpp
test/source/: is-prime-request-test.cpp  network-exercises_test.cpp  queue-test.cpp
zig/: build.zig  build.zig.zon
zig/src/0-smoke-test/: Queue.zig  main.zig
zig/src/1-prime-time/: main.zig
zig/src/2-means-to-an-end/: main.zig
zig/src/3-budget-chat/: main.zig
zig/src/4-unusual-database/: main.zig
zig/src/5-mob-in-the-middle/: main.zig
zig/src/6-speed-daemon/: logger.zig  logic.zig  main.zig  messages.zig  time.zig  types.zig
zig/src/utils/: Queue.zig  root.zig
